# arc

./: .gitignore  README.md  pyproject.toml  redesign_summary.txt
docs/: justin_workflow_mapping.md  todo.md
fixtures/ECR/2026-06-04/: book_completeness.csv  completeness_exception_report.csv  completeness_summary.csv  dod_var_extract__portfolio.csv  dod_var_extract__ubr_level_9.csv  kannon_sensi.csv  kannon_trade_level_sensi.csv  mvar.csv  rf_sensi.csv  tminus1_trade_mvar.csv  trade_completeness.csv
fixtures/ECR/2026-06-04/stubs/: historical_trade_status.csv  riskfinder_calc_status.csv  upstream_trade_presence.csv
fixtures/demo/ECR/global/2026-06-04/: completeness_exception_report.csv  completeness_summary.csv  dod_var_extract__portfolio.csv  kannon_trade_level_sensi.csv  tminus1_trade_mvar.csv
fixtures/demo/ECR/japan/2026-06-04/: completeness_exception_report.csv  completeness_summary.csv  (+3 more)
fixtures/rules/: row1.json  row1_global.json  row1_japan.json
src/arc/: rule.py  run_summary.py  runner.py  visualize.py
src/arc/cli/: run_ba.py  visualize_rule.py
src/arc/clients/: correction.py  reporting.py
src/arc/core/: blackboard.py  context.py  evidence_store.py  results.py  run_state.py
src/arc/handlers/: __init__.py  _common.py  act_correction.py  attribute_completeness.py  attribute_missing_trades.py  completeness_gate.py  decide_correction.py  dod_var_move.py  mvar.py  record_breach.py  registry.py  trade_level_kannon_sensi_mat.py  trade_level_tminus1_mvar_mat.py
src/arc/nodes/: base.py  concrete.py  placeholders.py
tests/: test_row_dsl.py
(+6 files in other folders)
